Added handling for rows with fewer/more attributes